fixed deprecated integer constructor call